src/test/ui/kinds-of-primitive-impl.stderr
error[E0390]: cannot define inherent `impl` for primitive types
  --> $DIR/kinds-of-primitive-impl.rs:1:6
   |
LL | impl u8 {
   |      ^^
   |
   = help: consider using a trait instead

error[E0390]: cannot define inherent `impl` for primitive types
  --> $DIR/kinds-of-primitive-impl.rs:6:6
   |
LL | impl str {
   |      ^^^
   |
   = help: consider using a trait instead

error[E0390]: cannot define inherent `impl` for primitive types
  --> $DIR/kinds-of-primitive-impl.rs:12:6
   |
LL | impl char {
   |      ^^^^
   |
   = help: consider using a trait instead

error: aborting due to 3 previous errors

For more information about this error, try `rustc --explain E0390`.
